[package]
name = "clients_importer"
version = "0.1.0"
authors = ["My <my@famer.me"]
edition = '2021'

[dependencies]
tokio = { version = "1.23", features = ["rt", "macros", "rt-multi-thread"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "uuid", "chrono", "json" ] }
csv = "1.1"
uuid = "1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-serde-json = "0.3.0"